--- a/ikcamp/app.json
+++ b/ikcamp/app.json
@@ -16,5 +16,6 @@
     "uploadFile": 10000,
     "downloadFile": 10000
   },
-  "debug": true
+  "debug": true,
+  "sitemapLocation": "sitemap5.json"
 }
